Bug 128364 - Left arrow key in Navigator Headings root content navigation view leave subheading(s) selected
Summary: Left arrow key in Navigator Headings root content navigation view leave subhe...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.5.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2019-10-24 06:12 UTC by Jim Raykowski
Modified: 2019-11-19 16:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-10-24 06:12:58 UTC
Steps to repro:

1) Open or create a document that has subheadings or use the test headings file found here:
https://bugs.documentfoundation.org/attachment.cgi?id=155174
2) F5 or Menu > View > Navigator or Menu > View > Sidebar and select Navigator from tab in the tab bar 
3) Switch to Content Navigation View root mode by using the button in the toolbox above the content list
4) Select a subheading that has no subheadings
5) Press the left arrow key

Results: Heading level above subheading is selected and subheading also remains selected

Expected results: Subheading is not selected

Additional info: Does not occur when Navigator is not in Headings root mode. In root mode multiple section of headings are possible. Different results occur with key modifier use (ctrl or shift + left arrow) and with more than one subheading selected.
Comment 1 Dieter 2019-10-25 19:00:47 UTC
I confrm it with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 758516295e5f69393bd78bb4af6e7214d48ece0b
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded
Comment 2 Commit Notification 2019-10-26 06:06:01 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6b11ff2f2b8aa626327bd7e2d5f4a8617a54f589

tdf#128364 Navigator headings left arrow key behavior change

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Dieter 2019-11-19 16:03:32 UTC
Verified with

Version: 6.4.0.0.beta1 (x64)
Build ID: 4d7e5b0c40ed843384704eca3ce21981d4e98920
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded