tdf#128364 Navigator headings left arrow key behavior change

When in headings content navigation view root mode unselect entries
before passing left arrow key on for handling.

Change-Id: I671b27da98cb04ad8980234f44e7636f4239817c
Reviewed-on: https://gerrit.libreoffice.org/81538
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>